--- a/core/LLM_Model/test.ipynb
+++ b/core/LLM_Model/test.ipynb
@@ -369,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "analyzerenv",
+   "display_name": "inventory",
    "language": "python",
    "name": "python3"
   },
